--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,7 +4,12 @@ $button-bgcolor: blueviolet;
 // font size variable declaration
 
 
-
+@mixin banner-style() {
+    background-color: $banner-bgcolor;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 
 * {
     margin: 0;
@@ -51,10 +56,7 @@ nav {
 
 // Style for Banner
 .banner {
-    background-color: $banner-bgcolor;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    @include banner-style();
 
     .banner-text {
 
@@ -86,12 +88,18 @@ nav {
 // Style for featured products
 .featured {
     margin: 60px 0;
+
+
+}
+
+h2 {
+    text-align: center;
 }
 
 .products {
     @extend .featured;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
 
     .product {
@@ -101,5 +109,51 @@ nav {
             width: 100%;
             height: 400px;
         }
+
+        .product-details {
+            @extend h2;
+        }
+    }
+}
+
+// Style for Offer Banner
+.offerBanner {
+    background-color: #c0dbfc
+}
+
+.offer {
+    @include banner-style();
+}
+
+// Style for Service Facilities
+.Facilities {
+    margin: 70px 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+
+    img {
+        width: 100%;
+    }
+}
+
+// Style for journals 
+.journals {
+    @extend .Facilities;
+}
+
+// Style for follow Us 
+.followed {
+    @extend .Facilities;
+}
+
+// Style for footer
+.footerMain {
+    background-color: lightgrey;
+    padding: 100px 0;
+
+    .footer {
+        @extend .Facilities;
+        margin-bottom: 0;
     }
 }
