--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,16 +1,11 @@
 // colours variable declaration
-$banner-bgcolor: linear-gradient(0.25turn, pink, lightpink, tomato);
-$footer-bgcolor: linear-gradient(0.25turn, #fad2d9, #fbc4cd, #f79280);
-$starColor: tomato;
+$banner-bgcolor: linear-gradient(0.25turn, #fbb1be, #f2cbc4, #e2938e);
+$footer-bgcolor: linear-gradient(0.25turn, #e8e1d7, #f6efe9, #e7e0d6);
+
+$btnBgColor: #ff5355;
+$starColor: #c7452e;
 $borderColor: #c4c3c3;
 $lightPara: #888787;
-
-@mixin footer-banner() {
-    background-color: $footer-bgcolor;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
 
 @mixin text-handle($size, $color, $weight) {
     font-size: $size;
@@ -23,9 +18,9 @@ $lightPara: #888787;
 }
 
 @mixin btn-handle() {
-    background-color: tomato;
+    background-color: $btnBgColor;
     color: white;
-    padding: 20px 30px;
+    padding: 20px 40px;
     margin-top: 15px;
     border: none;
     border-radius: 9px;
@@ -94,7 +89,7 @@ p {
 }
 
 .light-para {
-    @include text-handle(18px, #888787, 600)
+    @include text-handle(16px, #888787, 500)
 }
 
 // Style for Navigation
@@ -122,6 +117,8 @@ nav {
     @include flexing(space-evenly, center);
 
     .bannerText {
+        text-align: center;
+
         p {
             @include upprecase();
         }
@@ -131,6 +128,7 @@ nav {
         }
     }
 
+
     .bannerImg {
         img {
             width: 90%;
@@ -138,7 +136,6 @@ nav {
         }
     }
 }
-
 
 // Style for Featured Products Section
 @mixin singleProduct() {
@@ -178,7 +175,7 @@ nav {
 // Style for Offer Banner Section
 .offerBanner {
     background: $footer-bgcolor;
-    @include flexing(space-evenly, center);
+    @include flexing(center, center);
 
     .offerText {
         .offerh1 {
@@ -195,9 +192,10 @@ nav {
         }
     }
 
+
     .offerImg {
         img {
-            width: 100%;
+            width: 90%;
         }
     }
 }
@@ -252,6 +250,7 @@ nav {
             .journalImg {
                 img {
                     width: 100%;
+                    max-height: 400px;
                     border-radius: 9px 9px 0px 0px;
                 }
             }
@@ -266,7 +265,7 @@ nav {
 
                 .journalIcon {
                     color: $lightPara;
-                    margin-right: 15px;
+                    margin-right: 10px;
                 }
             }
         }
@@ -306,6 +305,22 @@ nav {
         .footer {
             .heading {
                 margin-bottom: 20px;
+            }
+
+            .google {
+                @include flexing(space-evenly, center);
+                border: 1px solid $btnBgColor;
+                border-radius: 9px;
+                margin-bottom: 10px;
+
+                .fotIcon {
+                    font-size: 20px;
+                    color: $btnBgColor;
+                }
+            }
+
+            .apple {
+                @extend .google;
             }
         }
     }
